--- a/index.html
+++ b/index.html
@@ -3,3 +3,12 @@ layout: default
 ---
 
 <h1>hi</h1>
+
+<ul>
+    {% for post in site.posts %}
+    <li>
+        <a href="">{{post.title}}</a>
+        <p>{{post.meta}}</p>
+    </li>
+    {% endfor %}
+</ul>
