--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ priority: 1.0
     {% for project in site.categories.project limit:2 %}
     <li>
         <a href="{{site.baseurl}}{{project.url}}">{{project.title}}</a>
-        <p>{{project.meta}}</p>
+        <!-- <p>{{project.meta}}</p> -->
     </li>
     {% endfor %}
 </ul>
