updated posts & css

--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@ priority: 1.0
     {% endfor %}
 </ul>
 
+<h2>React Native</h2>
+<ul>
+    {% for reactN in site.categories.react_native %}
+    <li>
+        <a href="{{site.baseurl}}{{reactN.url}}">{{reactN.title}}</a>
+        <!-- <p>{{react.meta}}</p> -->
+    </li>
+    {% endfor %}
+</ul>
+
 <h2>React</h2>
 <ul>
     {% for react in site.categories.react %}
