--- a/index.html
+++ b/index.html
@@ -49,3 +49,13 @@ priority: 1.0
     </li>
     {% endfor %}
 </ul>
+
+<h2>Trouble Shooting</h2>
+<ul>
+    {% for troubleShoot in site.categories.troubleShoot %}
+    <li>
+        <a href="{{site.baseurl}}{{troubleShoot.url}}">{{troubleShoot.title}}</a>
+        <!-- <p>{{troubleShoot.meta}}</p> -->
+    </li>
+    {% endfor %}
+</ul>
