--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ priority: 1.0
     </li>
     {% endfor %}
 </ol> -->
-<h2>Today I learned</h2>
+<div class="main-container">
+    <h2>Today I learned</h2>
 <ul>
     {% for post in site.categories.til%}  
     <!-- limit:2  -->
@@ -59,3 +60,5 @@ priority: 1.0
     </li>
     {% endfor %}
 </ul>
+</div>
+
