--- a/about.html
+++ b/about.html
@@ -41,10 +41,11 @@ mastfooterClass: about-footer
         </div>
         <div class="item item6">
             <div class="frame">
-                안녕하세요? 임연수입니다. 그래픽 디자인, 애니메이션, 그리고 프로그래밍 그 사이의 영역에 관심이 많아요! 제 결과물들은 다양한 화면 기반의 실험작들입니다. 
+                ¡공사중! <br>
+                안녕하세요? 임연수입니다. 그래픽 디자인, 애니메이션, 그리고 프로그래밍 그 사이의 영역에 관심이 많아요! 제 결과물들은 다양한 화면 미디어 기반의 실험작들입니다. 
                 
                 <br><br>
-                미국 샌프란시스코 소재 핀테크 회사에서 UX Engineer로 일했었고 그 전에는 모션 디자이너, 그래픽 디자이너, 그리고 한국 서울에서는 UX 리서처로 일해본 경력이 있습니다. 
+                미국 샌프란시스코 소재 핀테크 회사에서 UX Engineer로 그 전에는 프리랜서로서 웹 디자인과 퍼블리싱, 모션, 그래픽 디자인 그리고 디자인&아트 교육 등의 다양한 분야에서 일을 해봤고 그만큼 다양한 사람들과 일을 해본 경험이 있어요. 이 경험들은 저에게 한가지 일을 다양한 관점으로 바라보는게 해주고 있습니다. 
             </div>
         </div>
         <div class="item item7"></div>
