--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ mastfooterClass: about-footer
     <div class="wrapper">
         <div class="item item1">
             <div class="frame">
-                <div class="text"> <span id="krName">임연수</span><br><div id="enName">-<br>Younsoo <br>Tom Lim</div> </div>
+                <div class="text"> <span id="krName">임연수</span><br><div id="enName">/<br>Younsoo <br>Tom Lim</div> </div>
             </div>
         </div>
         <div class="item item2">
@@ -41,11 +41,11 @@ mastfooterClass: about-footer
         </div>
         <div class="item item6">
             <div class="frame">
-                ¡공사중! <br>
-                안녕하세요? 임연수입니다. 그래픽 디자인, 애니메이션, 그리고 프로그래밍 그 사이의 영역에 관심이 많아요! 제 결과물들은 다양한 화면 미디어 기반의 실험작들입니다. 
-                
+                / <br>
+                안녕하세요? 임연수입니다. <strong>그래픽 디자인, 애니메이션, 그리고 프로그래밍 그 사이의 영역에 관심이 많아요!</strong> 그 결과 제  포트폴리오들은 화면 기반의 미디어들을 다루는 프로젝트와 실험작들이 많습니다. 
                 <br><br>
-                미국 샌프란시스코 소재 핀테크 회사에서 UX Engineer로 그 전에는 프리랜서로서 웹 디자인과 퍼블리싱, 모션, 그래픽 디자인 그리고 디자인&아트 교육 등의 다양한 분야에서 일을 해봤고 그만큼 다양한 사람들과 일을 해본 경험이 있어요. 이 경험들은 저에게 한가지 일을 다양한 관점으로 바라보는게 해주고 있습니다. 
+                미국 샌프란시스코 소재 핀테크 회사에서 UX Engineer로 그 전에는 프리랜서로서 웹 디자인과 퍼블리싱, 모션, 그래픽 디자인 그리고 디자인&아트 교육 등의 분야에서 일을 해봤고 그만큼 많은 사람들과 여러가지 분야의 일을 해본 경험이 있어요. 이 경험들은 저에게 한가지 일을 다양한 관점으로 바라보는게 해주고 있고 저의 최고의 장점이 되었습니다.
+                <br><br>
             </div>
         </div>
         <div class="item item7"></div>
