updated css and writings

--- a/about.html
+++ b/about.html
@@ -19,13 +19,13 @@ mastfooterClass: about-footer
         <div class="item item3">
             <div class="frame">
                 <div class="cover"></div>
-                <div class="text"><a href="/">개발자 <br> 포트폴리오 <br> 링크(공사중)<br></a></div>
+                <div class="text"><a href="http://tommlimm.net">/<br>디자이너<br>포트폴리오</a></div>
             </div>
         </div>
         <div class="item item4">
             <div class="frame">
                 <div class="cover"></div>
-                <div class="text"><a href="http://tommlimm.net">디자이너 <br> 포트폴리오 <br> 링크<br><br>//</a></div>
+                <div class="text"><a href="/">/<br>개발자 <br> 포트폴리오<br>홈페이지로 가기<br>/</a></div>
             </div>
         </div>
         <div class="item item5">
