--- a/about.html
+++ b/about.html
@@ -30,21 +30,22 @@ mastfooterClass: about-footer
         </div>
         <div class="item item5">
             <lottie-player 
-            src="https://assets9.lottiefiles.com/datafiles/gUENLc1262ccKIO/data.json"  
+            src="{{site.baseurl}}/js/about_bot_face.json"  
             background="transparent"  
             speed="1"  
-            style="width: 300px;"  
             loop 
             hover
-            >
+            id="about-bot">
             </lottie-player>
         </div>
         <div class="item item6">
             <div class="frame">
-                안녕하세요! 프론트 엔드 개발자 임연수라고 합니다. 저는 <strong>그래픽 디자인, 애니메이션, 그리고 컴퓨터 프로그래밍 그 사이의 영역에 관심이 많아요!</strong> 그래서 이전에는 VR, AR을 포함한 다양한 화면 기반 미디어의 디자인과 프로젝트들을 진행했고 이는 개발자라는 직군에 관심을 가지게 된 계기가 되었어요.
-                <br>
-                미국 샌프란시스코 소재 핀테크 회사에서 UX Engineer로 일했고 그 전에는 프리랜서로서 웹 디자인과 퍼블리싱, 모션, 그래픽 디자인 그리고 디자인 & 아트 교육 등을 해왔어요. 여러가지 분야의 클라이언트와 다양한 경력의 동료들과 협업을 해왔고 이 경험들은 한가지 일을 다양한 관점으로 바라볼 수 있게 도와주고 매사 유연한 마음가짐을 가지게 해주는 교훈이 되었어요.
-                <br><br>
+                <div>
+                    안녕하세요! 프론트 엔드 개발자 임연수라고 합니다. 저는 <strong>그래픽 디자인, 애니메이션, 그리고 컴퓨터 프로그래밍 그 사이의 영역에 관심이 많아요!</strong> 그래서 이전에는 VR, AR을 포함한 다양한 화면 기반 미디어의 디자인과 프로젝트들을 진행했고 이는 개발자라는 직군에 관심을 가지게 된 계기가 되었어요.
+                    <br>
+                    미국 샌프란시스코 소재 핀테크 회사에서 UX Engineer로 일했고 그 전에는 프리랜서로서 웹 디자인과 퍼블리싱, 모션, 그래픽 디자인 그리고 디자인 & 아트 교육 등을 해왔어요. 여러가지 분야의 클라이언트와 다양한 경력의 동료들과 협업을 해왔고 이 경험들은 한가지 일을 다양한 관점으로 바라볼 수 있게 도와주고 매사 유연한 마음가짐을 가지게 해주는 교훈이 되었어요.
+                    <br><br>
+                </div>
             </div>
         </div>
         <div class="item item7"></div>
