--- a/about.html
+++ b/about.html
@@ -4,6 +4,9 @@ pageClass: about-container
 mastheadClass: about-head
 mastfooterClass: about-footer
 ---
+<script src="{{site.baseurl}}/js/jlottie.js" type="text/javascript" type="text/javascript"></script>
+<script src="{{site.baseurl}}/js/lottie-player.js" type="text/javascript"></script>
+
 <div class="main">
     <div class="wrapper">
         <div class="item item1">
@@ -30,7 +33,7 @@ mastfooterClass: about-footer
         </div>
         <div class="item item5">
             <lottie-player 
-            src="{{site.baseurl}}/js/about_bot_face.json"  
+            src="{{site.baseurl}}/js/jlottie-test-1.json"  
             background="transparent"  
             speed="1"  
             loop 
@@ -48,8 +51,50 @@ mastfooterClass: about-footer
                 </div>
             </div>
         </div>
-        <div class="item item7"></div>
+        <div class="item item7" id="item7">
+            <div id="my-animation"></div>
+        </div>
     </div>
 </div>
 
-<script src="https://unpkg.com/@lottiefiles/lottie-player@0.3.0/dist/lottie-player.js"></script>
+<style>
+    .black-filter {
+      filter: brightness(0%);
+    }
+
+    .gary-filter {
+      filter: invert(100%) saturate(0%) hue-rotate(0deg) brightness(40%) contrast(100%);
+    }
+
+    .twitter-blue-filter {
+      filter: invert(57%) sepia(37%) saturate(776%) hue-rotate(176deg)
+        brightness(101%) contrast(96%);
+    }
+</style>
+
+<script>
+    let animationContainer = document.getElementById('my-animation');
+    jlottie.loadAnimation({
+                    container: animationContainer,
+                    loop: false,
+                    autoplay: false,
+                    path: '/js/jlottie-test-1.json',
+    });
+
+    let item7Container = document.getElementById('item7');
+
+    item7Container.addEventListener("click", () => {
+        jlottie.play(animationContainer.id);
+    });
+    item7Container.addEventListener("onLoopComplete", () => {
+        jlottie.goToAndStop(0, true, animationContainer.id);
+    });
+    item7Container.addEventListener("mouseover", () => {
+        animationContainer.classList.remove("black-filter");
+        animationContainer.classList.add("gary-filter");
+      });
+      item7Container.addEventListener("mouseleave", () => {
+        animationContainer.classList.remove("gary-filter");
+        animationContainer.classList.add("black-filter");
+      });
+</script>
