updated on lottie

--- a/about.html
+++ b/about.html
@@ -31,15 +31,10 @@ mastfooterClass: about-footer
                 <div class="text"><a href="/">/<br>개발자 <br> 포트폴리오<br>홈페이지로 가기<br>/</a></div>
             </div>
         </div>
-        <div class="item item5">
-            <lottie-player 
-            src="{{site.baseurl}}/js/jlottie-test-1.json"  
-            background="transparent"  
-            speed="1"  
-            loop 
-            hover
-            id="about-bot">
-            </lottie-player>
+        <div class="item item7" id="item7">
+            <div class="frame">
+                <div id="my-animation"></div>
+            </div>
         </div>
         <div class="item item6">
             <div class="frame">
@@ -51,8 +46,15 @@ mastfooterClass: about-footer
                 </div>
             </div>
         </div>
-        <div class="item item7" id="item7">
-            <div id="my-animation"></div>
+        <div class="item item5">
+            <lottie-player 
+            src="{{site.baseurl}}/js/lottie-player-test-1.json"  
+            background="transparent"  
+            speed="1"  
+            loop 
+            hover
+            id="about-bot">
+            </lottie-player>
         </div>
     </div>
 </div>
@@ -62,19 +64,20 @@ mastfooterClass: about-footer
       filter: brightness(0%);
     }
 
-    .gary-filter {
-      filter: invert(100%) saturate(0%) hue-rotate(0deg) brightness(40%) contrast(100%);
-    }
+    /* .gary-filter {
+        filter: invert(57%) sepia(37%) saturate(1776%) hue-rotate(176deg)
+        brightness(101%) contrast(96%);
+    } */
 
     .twitter-blue-filter {
       filter: invert(57%) sepia(37%) saturate(776%) hue-rotate(176deg)
         brightness(101%) contrast(96%);
     }
-</style>
+  </style>
 
 <script>
     let animationContainer = document.getElementById('my-animation');
-    jlottie.loadAnimation({
+    let loadAnimation = jlottie.loadAnimation({
                     container: animationContainer,
                     loop: false,
                     autoplay: false,
