뭐 수정했어요

--- a/about.html
+++ b/about.html
@@ -64,10 +64,10 @@ mastfooterClass: about-footer
       filter: brightness(0%);
     }
 
-    /* .gary-filter {
+    .gary-filter {
         filter: invert(57%) sepia(37%) saturate(1776%) hue-rotate(176deg)
         brightness(101%) contrast(96%);
-    } */
+    }
 
     .twitter-blue-filter {
       filter: invert(57%) sepia(37%) saturate(776%) hue-rotate(176deg)
