--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@ mastfooterClass: about-footer
         <div class="item item6">
             <div class="frame">
                 <div>
-                    안녕하세요! 프론트 엔드 개발자 임연수라고 합니다. 저는 <strong>그래픽 디자인, 애니메이션, 그리고 컴퓨터 프로그래밍 그 사이의 영역에 관심이 많아요!</strong> 그래서 이전에는 VR, AR을 포함한 다양한 화면 기반 미디어의 디자인과 프로젝트들을 진행했고 이는 개발자라는 직군에 관심을 가지게 된 계기가 되었어요.
+                    안녕하세요! 프론트 엔드 개발자 임연수라고 합니다. 저는 <strong>그래픽 디자인, 애니메이션, 그리고 컴퓨터 프로그래밍 그 사이의 영역에 관심이 많아요!</strong> 그래서 이전에는 VR, AR을 포함한 다양한 화면 기반 미디어의 디자인과 프로젝트들을 진행했고 이는 개발자가 된 계기가 되었어요.
                     <br>
                     미국 샌프란시스코 소재 핀테크 회사에서 UX Engineer로 일했고 그 전에는 프리랜서로서 웹 디자인과 퍼블리싱, 모션, 그래픽 디자인 그리고 디자인 & 아트 교육 등을 해왔어요. 여러가지 분야의 클라이언트와 다양한 경력의 동료들과 협업을 해왔고 이 경험들은 한가지 일을 다양한 관점으로 바라볼 수 있게 도와주고 매사 유연한 마음가짐을 가지게 해주는 교훈이 되었어요.
                     <br><br>
@@ -60,20 +60,6 @@ mastfooterClass: about-footer
         </div>
     </div>
 </div>
-
-<style>
-    .black-filter {
-        filter: brightness(0%);
-    }
-
-    .gary-filter {
-        filter: invert(57%) sepia(37%) saturate(1776%) hue-rotate(176deg) brightness(101%) contrast(96%);
-    }
-
-    .twitter-blue-filter {
-        filter: invert(57%) sepia(37%) saturate(776%) hue-rotate(176deg) brightness(101%) contrast(96%);
-    }
-</style>
 
 <script>
     let animationContainer = document.getElementById('my-animation');
