--- a/about.html
+++ b/about.html
@@ -9,25 +9,25 @@ mastfooterClass: about-footer
 
 <div class="main">
     <div class="wrapper">
-        <div class="item item1">
+        <div class="item item1" id='myName'>
             <div class="frame">
                 <div class="text"> <span id="krName">임연수</span><br>
                     <div id="enName">/<br>Younsoo <br>Tom Lim</div>
                 </div>
             </div>
         </div>
-        <div class="item item2">
+        <div class="item item2" id='heroImage'>
             <div class="frame">
                 <div class="cover"></div>
             </div>
         </div>
-        <div class="item item3">
+        <div class="item item3" id='linkToDesigner'>
             <div class="frame">
                 <div class="cover"></div>
                 <div class="text"><a href="http://tommlimm.net">/<br>디자이너<br>포트폴리오</a></div>
             </div>
         </div>
-        <div class="item item4">
+        <div class="item item4" id='linkToDeveloper'>
             <div class="frame">
                 <div class="cover"></div>
                 <div class="text"><a href="/">/<br>개발자 <br> 포트폴리오<br>홈페이지로 가기<br>/</a></div>
@@ -38,17 +38,17 @@ mastfooterClass: about-footer
                 <div id="my-animation"></div>
             </div>
         </div>
-        <div class="item item6">
+        <div class="item item6" id='description'>
             <div class="frame">
                 <div>
-                    안녕하세요! 프론트 엔드 개발자 임연수라고 합니다. 저는 <strong>그래픽 디자인, 애니메이션, 그리고 컴퓨터 프로그래밍 그 사이의 영역에 관심이 많아요!</strong> 그래서 이전에는 VR, AR을 포함한 다양한 화면 기반 미디어의 디자인과 프로젝트들을 진행했고 이는 개발자가 된 계기가 되었어요.
+                    안녕하세요! 프론트 엔드 개발자 임연수라고 합니다. 저는 <strong>그래픽 디자인, 애니메이션, 그리고 컴퓨터 프로그래밍 그 사이의 영역에 관심이 많아요!</strong> 센서, VR/AR을 포함한 다양한 화면 기반 미디어의 디자인과 프로젝트들을 진행했고 지금도 새로운 기술이나 장비들이라면 분야 상관없이 접하고 생각하는 것을 좋아해요.
                     <br>
                     미국 샌프란시스코 소재 핀테크 회사에서 UX Engineer로 일했고 그 전에는 프리랜서로서 웹 디자인과 퍼블리싱, 모션, 그래픽 디자인 그리고 디자인 & 아트 교육 등을 해왔어요. 여러가지 분야의 클라이언트와 다양한 경력의 동료들과 협업을 해왔고 이 경험들은 한가지 일을 다양한 관점으로 바라볼 수 있게 도와주고 매사 유연한 마음가짐을 가지게 해주는 교훈이 되었어요.
                     <br><br>
                 </div>
             </div>
         </div>
-        <div class="item item5">
+        <div class="item item5" id='lottie-p'>
             <lottie-player 
             src="{{site.baseurl}}/js/lottie-player-test-1.json"  
             background="transparent"  
