--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@ priority: 1.0
 </div>
 
 <div class="section">
+    <h2>Javascript</h2>
+    <ul>
+        {% for javascript in site.categories.Javascript %}
+        <li>
+            <a href="{{site.baseurl}}{{javascript.url}}">{{javascript.title}}</a>
+            <!-- <p>{{react.meta}}</p> -->
+        </li>
+        {% endfor %}
+    </ul>
+</div>
+
+<div class="section">
     <h2>HTML&CSS</h2>
     <ul>
         {% for htmlAndCss in site.categories.htmlAndCss %}
