--- a/index.html
+++ b/index.html
@@ -60,12 +60,24 @@ priority: 1.0
 </div>
 
 <div class="section">
-    <h2>프로젝트</h2>
+    <h2>Project</h2>
     <ul>
-        {% for project in site.categories.project %}
+        {% for project in site.categories.projects %}
         <li>
             <a href="{{site.baseurl}}{{project.url}}">{{project.title}}</a>
             <!-- <p>{{project.meta}}</p> -->
+        </li>
+        {% endfor %}
+    </ul>
+</div>
+
+<div class="section">
+    <h2>Test for test</h2>
+    <ul>
+        {% for test-for-test in site.categories.test-for-test %}
+        <li>
+            <a href="{{site.baseurl}}{{test-for-test.url}}">{{test-for-test.title}}</a>
+            <!-- <p>{{test-for-test.meta}}</p> -->
         </li>
         {% endfor %}
     </ul>
