--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@ mastfooterClass: about-footer
         container: animationContainer,
         loop: false,
         autoplay: false,
-        path: '/js/jlottie-test-1.json',
+        path: '{{site.baseurl}}/js/jlottie-test-1.json',
     });
 
     let item7Container = document.getElementById('item7');
