--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@ pageClass: about-container
 mastheadClass: about-head
 mastfooterClass: about-footer
 ---
+<link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Sans+KR:wght@700&display=swap" rel="stylesheet"> 
+
 <script src="{{site.baseurl}}/js/jlottie.js" type="text/javascript" type="text/javascript"></script>
 <script src="{{site.baseurl}}/js/lottie-player.js" type="text/javascript"></script>
 
@@ -41,7 +43,9 @@ mastfooterClass: about-footer
         <div class="item item6" id='description'>
             <div class="frame">
                 <div>
-                    로멘티스트 그리고 프론트 엔드 개발자
+                    <span id="about-word-1">프론트 엔드 개발자</span> 
+                    <span id="about-word-2">그리고</span> 
+                    <span id="about-word-3">로멘티스트</span>
                 </div>
             </div>
         </div>
