fixed: writing on About page

--- a/about.html
+++ b/about.html
@@ -43,9 +43,7 @@ mastfooterClass: about-footer
         <div class="item item6" id='description'>
             <div class="frame">
                 <div>
-                    <span id="about-word-1">프론트 엔드 개발자</span> 
-                    <span id="about-word-2">그리고</span> 
-                    <span id="about-word-3">로멘티스트</span>
+                    그래픽 디자인, 애니메이션, 그리고 프로그래밍 그 사이 어딘가에 있는 <span id="about-word-1">프론트 엔드 개발자</span> :)  
                 </div>
             </div>
         </div>
