--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ mastfooterClass: about-footer
 <script src="{{site.baseurl}}/js/jlottie.js" type="text/javascript" type="text/javascript"></script>
 <script src="{{site.baseurl}}/js/lottie-player.js" type="text/javascript"></script>
 
-<div class="main">
+<main class="main">
     <div class="wrapper">
         <div class="item item1" id='myName'>
             <div class="frame">
@@ -42,9 +42,13 @@ mastfooterClass: about-footer
         </div>
         <div class="item item6" id='description'>
             <div class="frame">
-                <div>
-                    그래픽 디자인, 애니메이션, 그리고 프로그래밍 그 사이 어딘가에 있는 <span id="about-word-1">프론트 엔드 개발자</span> :)  
-                </div>
+                <article id="description-writing">
+                    //about me <br>
+                    프론트 엔드 개발자 
+                    <br><br>
+                    //skills <br>
+                    HTML/CSS, Javascript
+                </article>
             </div>
         </div>
         <div class="item item5" id='lottie-p'>
@@ -58,7 +62,7 @@ mastfooterClass: about-footer
             </lottie-player>
         </div>
     </div>
-</div>
+</main>
 
 <script>
     let animationContainer = document.getElementById('my-animation');
