--- a/test.html
+++ b/test.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>개발 놀이터:)</h1>
+    프로그래밍 시작한지 <span id="time-container">0</span>초가 지났어요!
     <script>
         localStorage.setItem('name', 'Tom')
         console.log(localStorage.getItem('name'));
@@ -17,6 +18,20 @@
         sessionStorage.setItem('car', 'wow');
         sessionStorage.clear('car');
         document.cookie = 'username = Tom Thomas';
+
+        const timeContainer = document.getElementById("time-container");
+        const FESTART_DAY = "10-03-2021";
+        const FESTART_DAY_DATE = new Date(FESTART_DAY);
+        const intlNumberFormatter = new Intl.NumberFormat("en-US");
+
+        setInterval(() => {
+        const now = new Date();
+        const difference = Math.floor(
+            (now.getTime() - FESTART_DAY_DATE.getTime()) / 1000
+        );
+
+        timeContainer.innerText = intlNumberFormatter.format(difference);
+        }, 1000);
     </script>
 </body>
 
