Add: Design category Modified: css for typography and line height Removed: unused html

--- a/about.html
+++ b/about.html
@@ -13,8 +13,9 @@ mastfooterClass: about-footer
     <div class="wrapper">
         <div class="item item1" id='myName'>
             <div class="frame">
-                <div class="text"> <span id="krName">임연수</span><br>
-                    <div id="enName">/<br>Younsoo <br>Tom Lim</div>
+                <div>
+                    <h1 class="text"> <span id="krName">임연수</span></h1>
+                    <div id="enName">/<br/>Younsoo<br/>Tom Lim</div>
                 </div>
             </div>
         </div>
