--- a/test.html
+++ b/test.html
@@ -9,11 +9,9 @@
 </head>
 
 <body>
-    <h1>개발 놀이터:)</h1>
-    프로그래밍 시작한지 <span id="time-container">0</span>초가 지났어요!
+    <h1>8월의 개발 놀이터:)</h1>
+    프로그래밍 시작한지 <span id="time-container">0</span>초!
     <br/><br/>
-    <h2>리소스들</h2>
-    분명 언젠가 도움이 될만한 것들
     <ul>
         <li>
             <a href="https://addyosmani.com/resources/essentialjsdesignpatterns/book/" target="_blank">
