--- a/index.html
+++ b/index.html
@@ -75,6 +75,18 @@ priority: 1.0
     </ul>
 </div>
 
+<div class="section">
+    <h2>Design</h2>
+    <ul>
+        {% for item in site.categories.Design %}
+        <li>
+            <a href="{{site.baseurl}}{{item.url}}">{{item.title}}</a>
+            <!-- <p>{{item.meta}}</p> -->
+        </li>
+        {% endfor %}
+    </ul>
+</div>
+
 <div class="section lastSection">
     <h2>Trouble Shooting</h2>
     <ul>
