--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@ mastfooterClass: about-footer
         <div class="item item6" id='description'>
             <div class="frame">
                 <article id="description-writing">
-                    프론트 엔드 개발자 그리고 낭만주의자
+                    낭만주의자 그리고 프론트 엔드 개발자
                 </article>
             </div>
         </div>
