--- a/test.html
+++ b/test.html
@@ -14,13 +14,14 @@
         .fix {
             width: 100px;
         }
-
+        label.container{
+            cursor: pointer;
+        }
         .box {
             background-color: green;
             position: relative;
             mask-image: url(./img/star.svg);
             mask-mode: alpha;
-            width: 100%;
             height: 100px;
         }
 
@@ -33,13 +34,16 @@
 </head>
 
 <body>
-    <h1>8월의 개발 놀이터:)</h1>
     프로그래밍 시작한지 <span id="time-container">0</span>초!
+    <h1>www play ground:)</h1>
+    <p>still lost but I will survive</p>
+    <p>thanks, August</p>
+    
     <br /><br />
-    <label class="container">One
+    <label class="container">
+        One
         <div class="fix">
-            <div class="box">
-            </div>
+            <div class="box"></div>
         </div>
 
         <input type="checkbox" checked="checked">
