Add: Updated on nav and about description

--- a/about.html
+++ b/about.html
@@ -45,6 +45,13 @@ mastfooterClass: about-footer
             <div class="frame">
                 <article id="description-writing">
                     낭만주의자 그리고 프론트 엔드 개발자
+                    <ul>
+                        <li><a href="https://github.com/tomlim2" target="_blank">Github</a></li>
+                        <li><a href="https://www.linkedin.com/in/tommlimm/" target="_blank">Linkedin</a></li>
+                        <li><a href="https://www.instagram.com/tommlimm" target="_blank">Instagram</a></li>
+                        <li><a href="http://tommlimm.net" target="_blank">Designer Portfolio</a></li>
+                        <li><a href = "mailto: tomandlim@gmail.com" target="_blank">Email</a></li>
+                    </ul>
                 </article>
             </div>
         </div>
