Add: new posts about asynchronous

--- a/test.html
+++ b/test.html
@@ -14,9 +14,16 @@
         .fix {
             width: 100px;
         }
-        label.container{
+
+        .spinning{
+            display: inline-block;
+            font-size: 5rem;
+        }
+
+        label.container {
             cursor: pointer;
         }
+
         .box {
             background-color: green;
             position: relative;
@@ -34,11 +41,23 @@
 </head>
 
 <body>
+    <p class="time-now"></p>
     프로그래밍 시작한지 <span id="time-container">0</span>초!
-    <h1>www play ground:)</h1>
-    <p>still lost but I will survive</p>
+    <h1>www playground:)</h1>
+    <p>still lost but</p>
     <p>thanks, August</p>
-    
+
+    <div>
+        <p class="clock"></p>
+        <p>
+            <button class="start">Start</button>
+            <button class="stop">Stop</button>
+            <button class="reset">Reset</button>
+        </p>
+    </div>
+
+    <div class="spinning">↻</div>
+
     <br /><br />
     <label class="container">
         One
@@ -86,8 +105,95 @@
             In this resource, you are presented with the documentation for the Chai assertion library. This is helpful
             if you want a comprehensive resource for this library which pairs with any JavaScript testing framework.
         </li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Asynchronous/Introducing">Introducing
+                Asynchronous JavaScript</a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Asynchronous/Timeouts_and_intervals">Timeouts and intervals</a>
+        </li>
+        <li>
+            API
+            <ul> 
+                <li><a href="https://developers.google.com/maps/documentation/geocoding/start">google map</a></li>
+                <li><a href="https://developers.google.com/identity/protocols/oauth2/service-account">google OAuth 2.0</a></li>
+                <li><a href="https://developers.facebook.com/docs/messenger-platform/reference/send-api">Facebook Social Graph API</a></li>
+                <li><a href="https://developer.spotify.com/documentation/web-api/">Spotify Music Web API</a></li>
+                <li><a href="https://docs.microsoft.com/en-us/linkedin/shared/integrations/people/profile-api">LinkedIn Profile API</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch">Using Fetch</a>
+        </li>
     </ul>
 
+    <script>
+        // Define a counter variable for the number of seconds and set it to zero.
+        let secondCount = 0;
+        // Define a global to store the interval when it is active.
+        let stopWatch;
+        // Store a reference to the display paragraph in a variable
+        const displayPara = document.querySelector('.clock');
+
+        // Function to calculate the current hours, minutes, and seconds, and display the count
+        function displayCount() {
+            // Calculate current hours, minutes, and seconds
+            let hours = Math.floor(secondCount / 3600);
+            let minutes = Math.floor((secondCount % 3600) / 60);
+            let seconds = Math.floor(secondCount % 60)
+
+            // Display a leading zero if the values are less than ten
+            let displayHours = (hours < 10) ? '0' + hours : hours;
+            let displayMinutes = (minutes < 10) ? '0' + minutes : minutes;
+            let displaySeconds = (seconds < 10) ? '0' + seconds : seconds;
+
+            // Write the current stopwatch display time into the display paragraph
+            displayPara.textContent = displayHours + ':' + displayMinutes + ':' + displaySeconds;
+
+            // Increment the second counter by one
+            secondCount++;
+        }
+
+        // Store references to the buttons in constants
+        const startBtn = document.querySelector('.start');
+        const stopBtn = document.querySelector('.stop');
+        const resetBtn = document.querySelector('.reset');
+
+        // When the start button is pressed, start running displayCount() once per second using setInterval()
+        startBtn.addEventListener('click', () => {
+            stopWatch = setInterval(displayCount, 1000);
+            startBtn.disabled = true;
+        });
+
+        // When the stop button is pressed, clear the interval to stop the count.
+        stopBtn.addEventListener('click', () => {
+            clearInterval(stopWatch);
+            startBtn.disabled = false;
+        });
+
+        // When the reset button is pressed, set the counter back to zero, then immediately update the display
+        resetBtn.addEventListener('click', () => {
+            clearInterval(stopWatch);
+            startBtn.disabled = false;
+            secondCount = 0;
+            displayCount();
+        });
+
+        // Run displayCount() once as soon as the page loads so the clock is displayed
+        displayCount();
+    </script>
+
+    <script>
+        function displayTime() {
+            let date = new Date();
+            let time = date.toLocaleTimeString();
+            document.querySelector('.time-now').textContent = time;
+        }
+
+        displayTime();
+        const createClock = setInterval(displayTime, 1000);
+
+        let myGreeting = setTimeout(() => {
+            alert('Hello, Mr. Universe!');
+        }, 4000);
+    </script>
     <script>
         //localStorage exercise
 
@@ -113,6 +219,39 @@
             );
             timeContainer.innerText = intlNumberFormatter.format(difference);
         }, 1000);
+    </script>
+
+    <script>
+
+        // Store reference to the div element, create a rotate counter and null startTime
+        // and create an uninitialized variable to store the requestAnimationFrame() call in
+        const spinner = document.querySelector('.spinning');
+        let rotateCount = 0;
+        let startTime = null;
+        let rAF;
+
+        // Create a draw() function
+        function draw(timestamp) {
+            if (!startTime) {
+                startTime = timestamp;
+            }
+
+            rotateCount = (timestamp - startTime) / 3;
+
+            // If rotateCount gets over 359, set it to 'remainder of dividing by 360'
+            if (rotateCount > 359) {
+                rotateCount %= 360;
+            }
+
+            // Set the rotation of the div to be equal to rotateCount degrees
+            spinner.style.transform = 'rotate(' + rotateCount + 'deg)';
+
+            // Call the next frame in the animation
+            rAF = requestAnimationFrame(draw);
+        }
+
+        draw(400);
+
     </script>
 </body>
 
