--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ priority: 1.0
         {% for item in sorted limit: 5 %}
         <li>
             <a href="{{site.baseurl}}{{item.url}}">{{ item.tags[0] }} / {{ item.title }}</a>
-            <p>{{item.meta}}</p>
+            <p>{{item.meta}} / <span class="date">{{item.date | date: '%B %d, %Y'}}</span></p>
         </li>
         {% endfor %}
     </ul>
